# sonic-buildimage

./: .gitmodules  Makefile.work
dockers/docker-framework/: Dockerfile.j2  framework.sh  start.sh  supervisord.conf
dockers/docker-platform-monitor/: docker-pmon.supervisord.conf.j2  lm-sensors.sh
files/build_templates/: framework.service.j2  init_cfg.json.j2
platform/vs/: docker-sonic-vs.mk
rules/: docker-framework.mk  framework.dep  ipmitool.mk
sonic-slave-bullseye/: Dockerfile.j2  Dockerfile.j2.orig
src/sonic-framework/: .gitignore  Makefile.am  autogen.sh
src/sonic-framework/debian/: changelog  control  rules
src/sonic-framework/gnoi/common/: common.proto
src/sonic-framework/rebootbackend/: Makefile.am  container_stop.pb.cc  container_stop.pb.h  container_stop.proto  gnoi_container_shutdown.xml  gnoi_container_shutdown_dbus.h  gnoi_reboot.xml  gnoi_reboot_dbus.h  init_thread.cpp  init_thread.h  interfaces.cpp  interfaces.h  reboot_common.cpp  reboot_common.h  reboot_interfaces.h  reboot_thread.cpp  reboot_thread.h  rebootbackend.cpp  rebootbe.cpp  rebootbe.h  redis_utils.cpp  redis_utils.h  telemetry_helper.cpp  telemetry_helper.h
src/sonic-framework/tests/: Makefile.am  init_thread_test.cpp  mock_reboot_interfaces.h  reboot_common_test.cpp  reboot_thread_test.cpp  rebootbe_test.cpp  redis_utils_test.cpp  telemetry_helper_test.cpp  test_utils_common.cpp  test_utils_common.h
src/sonic-py-common/sonic_py_common/: device_info.py
src/sonic-py-common/tests/: device_info_test.py
src/sonic-yang-models/doc/: Configuration.md
src/sonic-yang-models/tests/files/: sample_config_db.json
src/sonic-yang-models/tests/yang_model_pytests/: test_smart_switch.py
src/sonic-yang-models/yang-models/: sonic-smart-switch.yang
